# laminardb

./: .dockerignore  .gitignore  .gitmodules  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Justfile  README.md  SECURITY.md  bench_baseline_latency.txt  clippy.toml  compatibility.json  docker-compose.yml  format_include_test  node1.toml  node2.toml
crates/laminar-ai/: Cargo.toml
crates/laminar-ai/src/: adapter.rs  cache.rs  call_log.rs  provider.rs  runtime.rs
crates/laminar-ai/src/backends/: anthropic.rs  local.rs  mod.rs  openai.rs  rate_limited.rs  remote.rs
crates/laminar-auth/: Cargo.toml  README.md
crates/laminar-auth/src/: abac.rs  audit.rs  authn.rs  authz.rs  column_security.rs  encryption.rs  identity.rs  jwt.rs  key_management.rs  ldap_auth.rs  lib.rs  mtls.rs  rbac.rs  rls.rs  row_security.rs
crates/laminar-connectors/: Cargo.toml  README.md
crates/laminar-connectors/benches/: mongodb_throughput.rs
crates/laminar-connectors/src/: backfill.rs  cdc.rs  checkpoint.rs  checkpoint_typed.rs  config.rs  connector.rs  error.rs  generator.rs  health.rs  idempotent.rs  lib.rs  lookup.rs  macros.rs  metrics.rs  partition_assignment.rs  prom.rs  reference.rs  registry.rs  retry.rs  runtime.rs  testing.rs
crates/laminar-connectors/src/bridge/: mod.rs  runtime.rs
crates/laminar-connectors/src/changelog/: collapse.rs  mod.rs
crates/laminar-connectors/src/error_handling/: decoder.rs  metrics.rs  mod.rs  rate_limiter.rs  writer.rs
crates/laminar-connectors/src/files/: arrow_ipc_codec.rs  config.rs  discovery.rs  manifest.rs  mod.rs  sink.rs  source.rs  text_decoder.rs
crates/laminar-connectors/src/kafka/: avro.rs  avro_serializer.rs  backpressure.rs  config.rs  discovery.rs  metrics.rs  mod.rs  offsets.rs  partitioner.rs  rebalance.rs  schema_registry.rs  sink.rs  sink_config.rs  sink_metrics.rs  source.rs  watermarks.rs
crates/laminar-connectors/src/lakehouse/: commit_descriptor.rs  delta.rs  delta_config.rs  (+17 more)
crates/laminar-connectors/tests/: delta_coordinated_commit.rs  delta_s3_integration.rs  docker-compose.nats.yml  iceberg_coordinated_commit.rs  kafka_integration.rs  kafka_vnode_drain.rs  mongodb_integration.rs  nats_integration.rs  postgres_sink_integration.rs
crates/laminar-core/: Cargo.toml  README.md  build.rs
crates/laminar-core/benches/: cache_bench.rs  checkpoint_bench.rs  compiler_bench.rs  constellation_checkpoint_bench.rs  dag_bench.rs  dag_stress.rs  delta_checkpoint_bench.rs  io_uring_bench.rs  join_bench.rs  latency_bench.rs  lookup_join_bench.rs  reactor_bench.rs  shuffle_bench.rs  state_bench.rs  streaming_bench.rs  throughput_bench.rs  tpc_bench.rs  window_bench.rs
crates/laminar-core/proto/: barrier.proto  constellation.proto  delta.proto  laminar.proto  query.proto  shuffle.proto
crates/laminar-core/src/: changelog.rs  checkpoint_decision.rs  error_codes.rs  lib.rs  serialization.rs
crates/laminar-core/tests/: cluster_integration.rs  cluster_routing_integration.rs  shuffle_barrier_integration.rs  shuffle_tcp_integration.rs  shuffle_transport_integration.rs  state_backend_integration.rs  zero_alloc_integration.rs
crates/laminar-db/: Cargo.toml  README.md
crates/laminar-db/benches/: hot_path_micro.rs  recovery_bench.rs  stream_executor_bench.rs
crates/laminar-db/src/: adaptive.rs  aggregate_state.rs  ai_catalog.rs  ai_worker.rs  asof_batch.rs  batch_filter.rs  builder.rs  catalog.rs  catalog_connector.rs  changelog_filter.rs  checkpoint_coordinator.rs  config.rs  connector_manager.rs  coordinated_committer.rs  coordinated_recovery.rs  core_window_state.rs  db.rs  ddl.rs  e2e_crypto_sentiment.rs  engine_metrics.rs  eowc_state.rs  error.rs  filter_compile.rs  handle.rs  interval_join.rs  key_column.rs  lib.rs  log_throttle.rs  metrics.rs  metrics_api.rs  mv_store.rs  o3_merge.rs  operator_graph.rs  pipeline_callback.rs  pipeline_checkpoint.rs  pipeline_lifecycle.rs  profile.rs  rebalance.rs  recovery_manager.rs  retractable_accumulator.rs  (+15 more)
crates/laminar-db/tests/: bsky_websocket_e2e.rs  checkpoint_disk_persistence.rs  checkpoint_exactly_once.rs  checkpoint_integration.rs  checkpoint_performance.rs  checkpoint_recovery.rs  checkpoint_restart.rs  cluster_2pc_flow.rs  cluster_e2e_failures.rs  cluster_e2e_smoke.rs  cluster_integration.rs  cluster_minio_flow.rs  cluster_rebalance_flow.rs  distributed_rule_wiring.rs  iceberg_coordinated_e2e.rs  kafka_docker_scenarios.rs  n_way_join_differential.rs  perf_handle.rs  recovery_integration.rs  single_node_tier.rs  temporal_probe_ddl.rs  websocket_source_e2e.rs
crates/laminar-server/: Cargo.toml  README.md
crates/laminar-server/src/: ai.rs  alerting.rs  auth.rs  cli.rs  cluster.rs  cluster_config.rs  config.rs  console.html  dashboard.html  delta.rs  delta_config.rs  http.rs  main.rs  metrics.rs  pgwire.rs  reload.rs  server.rs  watcher.rs
crates/laminar-server/tests/: cluster_soak.rs
crates/laminar-sql/: Cargo.toml  README.md
crates/laminar-sql/src/: lib.rs
crates/laminar-sql/tests/: cluster_repartition_barrier_flow.rs  cluster_repartition_integration.rs
crates/laminar-storage/: Cargo.toml  README.md
crates/laminar-storage/benches/: checkpoint_bench.rs
crates/laminar-storage/src/: changelog_drainer.rs  checkpoint.rs  checkpoint_batcher.rs  checkpoint_manifest.rs  checkpoint_store.rs  disaggregated.rs  io_uring_wal.rs  lakehouse.rs  lib.rs  object_store_builder.rs  object_store_factory.rs  tiering.rs  wal.rs  wal_sequencer.rs  wal_state_store.rs
demo/kafka-iceberg-timeseries/validate/: Cargo.toml
examples/binance-markout/: Cargo.toml  pipeline.sql  smoke.py
examples/binance-markout/dashboard/: dashboard.css  dashboard.js  index.html
examples/binance-markout/src/: main.rs
examples/binance-ws/: Cargo.toml  pipeline.sql
examples/binance-ws/src/: main.rs  tui.rs  types.rs
examples/microstructure/: Cargo.toml  pipeline.sql
examples/microstructure/src/: history.rs  latency.rs  main.rs  tui.rs  types.rs
tools/state-tier-bench/: Cargo.toml  README.md
tools/state-tier-bench/src/: main.rs
(+934 files in other folders)
