[workspace]
members = [
    "crates/laminar-core",
    "crates/laminar-sql",
    "crates/laminar-storage",
    "crates/laminar-connectors",
    "crates/laminar-server",
    "crates/laminar-derive",
    "crates/laminar-db",
    "examples/demo",
    "examples/binance-ws",
    "examples/microstructure",
]
resolver = "2"

[workspace.package]
version = "0.18.9"
authors = ["LaminarDB Contributors"]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/laminardb/laminardb"
homepage = "https://laminardb.io"
documentation = "https://laminardb.io/api/laminar_db"
readme = "README.md"
keywords = ["streaming", "database", "sql", "embedded", "real-time"]
categories = ["database", "embedded", "data-structures"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8", features = ["std", "alloc", "bytecheck"] }
bytes = "1.11"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

# Allocator
tikv-jemallocator = "0.6"  # jemalloc for reduced fragmentation in Ring 1/2

# Performance-critical
rustc-hash = "2.1"  # Faster than std HashMap (replaces unmaintained fxhash)
parking_lot = "0.12"  # Faster Mutex/RwLock
memmap2 = "0.9"  # Memory-mapped files
bumpalo = "3.20"  # Arena allocator
uuid = { version = "1.22", features = ["v4", "v7", "serde"] }  # Unique IDs
gethostname = "0.5"  # Pure Rust hostname lookup
ahash = "0.8"  # Fast hashing for state stores
papaya = "0.2"  # Lock-free concurrent HashMap
foyer = { version = "0.22", features = ["serde"] }  # High-performance cache (S3-FIFO eviction, serde for HybridCache)
sha2 = "0.10"  # SHA-256 for checkpoint integrity
lz4_flex = "0.12"  # Pure Rust LZ4 compression (fastest decompression for recovery)
zstd = "0.13"  # Zstd compression for archival storage tiers (warm/cold)
backoff = { version = "0.4", features = ["tokio"] }  # Exponential backoff retry
regex = "1.12"
humantime-serde = "1.1"
notify = "8"
globset = "0.4"

# DataFusion and Arrow - using latest versions
arrow = { version = "57.2", default-features = true }
arrow-array = "57.2"
arrow-schema = "57.2"
arrow-cast = "57.2"
arrow-ipc = "57.2"
arrow-select = "57.2"
datafusion = "52.3"
datafusion-common = "52.0"
datafusion-expr = "52.0"
datafusion-sql = "52.0"
datafusion-optimizer = "52.0"
sqlparser = "0.59"

# Async
tokio-stream = "0.1"
futures = "0.3"

# Collections
smallvec = { version = "1.15", features = ["const_new", "union"] }
arrayvec = "0.7"

# Platform-specific
libc = "0.2"
io-uring = "0.7"  # Low-level io_uring bindings (Linux only)

# Probabilistic data structures
xorf = "0.12"

# Encoding
base64 = "0.22"

# Randomness
rand = "0.10"

# Constellation (distributed mode)
chitchat = "0.10"
tokio-util = { version = "0.7", features = ["rt"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Testing
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.10"
tempfile = "3.27"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
inherits = "release"
debug = true