[package]
name = "laminar-connectors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_connectors"
description = "External system connectors for LaminarDB - Kafka, CDC, lookup tables"

[dependencies]
# Core dependencies
laminar-core = { path = "../laminar-core", version = "0.18.9" }
laminar-storage = { path = "../laminar-storage", version = "0.18.9" }

# Kafka
rdkafka = { version = "0.39", features = ["cmake-build", "ssl-vendored"], optional = true }
arrow-avro = { version = "57.2", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }

# Database drivers for CDC and sinks
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", optional = true, features = ["with-chrono-0_4"] }
pgpq = { version = "0.11", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
pgwire-replication = { version = "0.2", optional = true }
# MySQL async driver with rustls (no OpenSSL required)
mysql_async = { version = "0.36", optional = true, default-features = false, features = ["rustls-tls", "binlog", "minimal-rust"] }
tokio-stream = { workspace = true, optional = true }

# Delta Lake
deltalake = { version = "0.31", optional = true, default-features = false, features = ["rustls"] }
deltalake-catalog-glue = { version = "0.15", optional = true }
datafusion = { workspace = true, optional = true }
url = { version = "2", optional = true }
uuid = { workspace = true }

# Bytes (for cache value types)
bytes = { workspace = true }
foyer = { workspace = true }

# Common
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }

# Arrow for RecordBatch
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }

# Parquet lookup source (optional)
parquet = { version = "57.2", optional = true, default-features = false, features = ["arrow"] }
object_store = { version = "0.13", optional = true }

# Timestamp parsing for JSON/CSV decoders
chrono = { workspace = true }

# CSV parsing
csv = "1.3"

# Kafka discovery (optional)
tokio-util = { workspace = true, optional = true }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["native-tls"], optional = true }
tungstenite = { version = "0.28", optional = true }
futures-util = { version = "0.3", features = ["sink"], optional = true }

# File source/sink
globset = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
xorf = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true, optional = true }

[features]
default = []
testing = []
kafka = ["dep:rdkafka", "dep:arrow-avro", "dep:reqwest"]
postgres-cdc = ["dep:tokio-postgres", "dep:pgwire-replication", "dep:deadpool-postgres"]
postgres-sink = ["dep:tokio-postgres", "dep:postgres-types", "dep:deadpool-postgres", "dep:pgpq", "dep:futures-util"]
# mysql-cdc: Business logic + mysql_async driver with rustls (no OpenSSL required)
mysql-cdc = ["dep:mysql_async", "dep:tokio-stream"]
# Delta Lake
delta-lake = ["dep:deltalake", "dep:url", "dep:datafusion", "deltalake/datafusion", "dep:tokio-util", "dep:tokio-stream"]
delta-lake-s3 = ["delta-lake", "deltalake/s3"]
delta-lake-azure = ["delta-lake", "deltalake/azure"]
delta-lake-gcs = ["delta-lake", "deltalake/gcs"]
delta-lake-unity = ["delta-lake", "deltalake/unity-experimental", "dep:reqwest"]
delta-lake-glue = ["delta-lake", "delta-lake-s3", "deltalake/glue", "dep:deltalake-catalog-glue"]
# Parquet file lookup source
parquet-lookup = ["dep:parquet", "dep:object_store"]
# Kafka-based discovery for delta
kafka-discovery = ["kafka", "laminar-core/delta", "dep:tokio-util"]
# WebSocket source and sink
websocket = ["dep:tokio-tungstenite", "dep:tungstenite", "dep:futures-util", "dep:url"]
# File source and sink (AutoLoader-style)
files = ["dep:notify", "dep:globset", "dep:object_store", "dep:parquet", "dep:libc", "dep:tokio-stream"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }