[package]
name = "laminar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_core"
description = "Core streaming engine for LaminarDB - operators, checkpoint barriers, and streaming primitives"

[features]
default = []
# Distributed cluster coordination. Unstable: discovery + partition guards
# work, but Raft consensus, inter-node RPC, and rebalance-on-membership are
# not yet implemented. Do not enable in production.
cluster-unstable = [
    "dep:chitchat", "dep:tokio-util", "dep:anyhow", "dep:futures",
]
[dependencies]
# Performance critical - no allocations on hot path
rustc-hash = { workspace = true }
xorf = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
foyer = { workspace = true }
object_store = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
equivalent = "1"
uuid = { workspace = true }
smallvec = { workspace = true }
arrayvec = { workspace = true }

# Arrow for columnar data
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-cast = { workspace = true }
arrow-ipc = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization for state (rkyv for zero-copy, serde for compatibility)
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async support for operators and streaming channels
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# SQL parsing (for filter compilation)
sqlparser = { workspace = true }


# Delta (optional, multi-node distributed mode — server-only)
chitchat = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
# anyhow is needed for the chitchat Transport trait impls in the
# testing module; activated by the cluster-unstable feature.
anyhow = { workspace = true, optional = true }
# futures is needed for the object_store::ObjectStore impl on
# FaultyObjectStore (BoxStream type). Cluster-unstable only.
futures = { workspace = true, optional = true }

# Observability
tracing = { workspace = true }

crossfire = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
toml = "0.9"
tempfile = { workspace = true }

[[bench]]
name = "window_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false

[[bench]]
name = "streaming_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "lookup_join_bench"
harness = false
