[package]
name = "laminar-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://laminardb.io/api/laminar_core"
description = "Core streaming engine for LaminarDB - operators, checkpoint barriers, and streaming primitives"

[features]
default = []
# Distributed cluster coordination.
cluster = [
    "dep:chitchat", "dep:tokio-util", "dep:anyhow",
    "dep:tonic", "dep:tonic-prost", "dep:prost",
    "dep:gethostname",
]
aws = ["object_store/aws"]
gcs = ["object_store/gcp"]
azure = ["object_store/azure"]

[dependencies]
# Performance critical - no allocations on hot path
rustc-hash = { workspace = true }
xorf = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
foyer = { workspace = true }
object_store = { workspace = true }
xxhash-rust = { workspace = true, features = ["xxh3"] }
equivalent = "1"
smallvec = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }

# Arrow for columnar data
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-ipc = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization for state (rkyv for zero-copy, serde for compatibility)
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Async support for operators and streaming channels
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }


# Delta (optional, multi-node distributed mode — server-only)
chitchat = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
# anyhow is needed for the chitchat Transport trait impls in the
# testing module; activated by the cluster feature.
anyhow = { workspace = true, optional = true }
gethostname = { workspace = true, optional = true }
# futures is needed for the object_store::ObjectStore impl on
# FaultyObjectStore (BoxStream type).
futures = { workspace = true }

# gRPC transport for cross-node shuffle + barrier sync (cluster).
# The generated client/server stubs are compiled only under that feature;
# `tonic-prost` supplies the ProstCodec the generated code instantiates.
# `tls-aws-lc` matches the pgwire side's rustls provider, so one process never
# installs two crypto providers; used for cluster control-plane mTLS.
tonic = { version = "0.14", optional = true, features = ["tls-aws-lc"] }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }

# Observability
tracing = { workspace = true }

crossfire = { workspace = true }

[build-dependencies]
# Generates the gRPC client/server stubs from proto/*.proto. Build-dependencies
# can't be feature-gated, so this is always present, but the codegen in build.rs
# runs only when CARGO_FEATURE_CLUSTER_UNSTABLE is set — a default build needs
# no protoc and skips generation entirely.
tonic-prost-build = "0.14"

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
toml = "0.9"
tempfile = { workspace = true }
# Mint a throwaway CA + node cert for the control-plane mTLS integration test.
rcgen = "0.13"

[[bench]]
name = "window_bench"
harness = false

[[bench]]
name = "latency_bench"
harness = false

[[bench]]
name = "streaming_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "lookup_join_bench"
harness = false
